--- a/example/templates/site.html
+++ b/example/templates/site.html
@@ -3,7 +3,7 @@
   <head profile="http://dublincore.org/documents/2008/08/04/dc-html/">{% block head_content %}
     <meta charset="utf-8">
     <title>{% if page_title %}{{page_title}} « {% endif %}{% if site_title %}{{site_title}} « {% endif %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=985">
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
